# blockchain-terminal

aptos-terminal/: Cargo.toml  README.md
aptos-terminal/src/: app.rs  event.rs  i18n.json  i18n.rs  layout.rs  main.rs  router.rs  widget.rs
aptos-terminal/src/ui/layout/: account.rs  home.rs  mod.rs  transaction.rs
aptos-terminal/src/ui/widget/: widget.rs
evm-terminal/: Cargo.toml  README.md
solana-terminal/: Cargo.toml  README.md
solana-terminal/src/: main.rs
