[package]
name = "aptos-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.27.0"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
tokio = {version = "1.4", features = ["full"]}
anyhow = "1.0.86"
once_cell = "1.19.0"
url = "2.5.2"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }